# covariance_modeling

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  random_number_generation.md
examples/: white_noise.cpp
imu_covariance_modeling/: setup.py
imu_covariance_modeling/src/: simulation.py
include/: distribution_generators.h  stochastic_process.h  stochastic_process_properties.h
src/cvm_core/: stochastic_processes.cpp
tests/: test_stochastic_process.cpp
viz_tutorials/: viz_uncertainty.ipynb
